Make CORS allow all origins (*)